# brave-core

./: BUILD.gn  Jenkinsfile  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  generated_resources.grd  os_settings_strings.grdp
app/android/: BUILD.gn
browser/: about_flags.cc  brave_browser_main_parts.cc  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  browser_context_keyed_service_factories.cc  sources.gni
common/: pref_names.cc  pref_names.h
patches/: chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-profiles-profile_impl.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-resources-settings-lifetime_browser_proxy.ts.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-views-tabs-tab_hover_card_bubble_view.h.patch  chrome-browser-ui-webui-about_ui.cc.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  chrome-test-BUILD.gn.patch  content-browser-renderer_host-navigation_request.cc.patch  content-renderer-render_frame_impl.cc.patch  (+1 more)
(+94 files in other folders)
